# README-MCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  MCP_SERVER_IMPLEMENTATION.md  MCP_SERVER_README.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  example.py  main.py  mcp_config.json  mcp_server.py  mcp_server_standalone.py  pyproject.toml  ruff.toml  run_example.py  test_readme.py
.github/workflows/: ci.yml  docker.yml
deploy/: cloud-run.yaml  digitalocean.yaml  kubernetes.yaml
schemas/: openapi.json  openapi.yaml
scripts/: dev.py  generate_openapi.py
src/readme_mcp/: __init__.py  api.py  github_client.py  main.py  models.py
tests/: test_integration.py  test_mcp_integration.py  test_mcp_protocol.py  test_mcp_server.py  test_mcp_simple.py  test_mcp_structure.py  test_readme.py
tests/load/: load_test.js
